--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
   <title>Frontend Mentor | Social links profile</title>
   <link rel="stylesheet" href="index.css">
 <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
-<img src="./images/avatar-jessica.jpeg" alt="avater jessica">
+<div>
+<img src="./images/avatar-jessica.jpeg" alt="avater jessica"><br><br>
   
  </head>
-<body>
+<>
 
-  <p>Jessica Randall</p>
-  <p>London, United Kingdom</p><br>
-  <p>"Front-end developer and avid reader."</p><br><br>
+  <p style="color: azure;">Jessica Randall</p>
+  <p style="color: rgb(160, 234, 148);">London, United Kingdom</p>
+  <p style="color: azure;">"Front-end developer and avid reader."</p>
+<div/>
+
 <div>
- <div> GitHub</div><br><br>
- <div> Frontend Mentor</div><br>
-  <div><LinkedIn</div><br><br>
-  <div>Twitter</div><br><br>
-  <div>Instagram</div><br><br>
+ <p style="color: azure;"> GitHub</p>
+ <p style="color: azure;"> Frontend Mentor</p>
+ <p style="color: azure;"><LinkedIn</p>
+<p style="color: azure;">Twitter</p>
+  <p style="color: azure;">Instagram</p>
+  
   </div>
 </body>
 </html>
