--- a/index.html
+++ b/index.html
@@ -3,29 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  
+ 
   <title>Frontend Mentor | Social links profile</title>
   <link rel="stylesheet" href="index.css">
 <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
-<div>
-<img src="./images/avatar-jessica.jpeg" alt="avater jessica"><br><br>
-  
  </head>
-<>
+ <body class="main">
 
-  <p style="color: azure;">Jessica Randall</p>
-  <p style="color: rgb(160, 234, 148);">London, United Kingdom</p>
-  <p style="color: azure;">"Front-end developer and avid reader."</p>
-<div/>
+  <img src="images/avatar-jessica.jpeg" alt="avatar-jessica">
 
-<div>
- <p style="color: azure;"> GitHub</p>
- <p style="color: azure;"> Frontend Mentor</p>
- <p style="color: azure;"><LinkedIn</p>
-<p style="color: azure;">Twitter</p>
-  <p style="color: azure;">Instagram</p>
+  <div class="first">
+  <h3 style="color: azure;">Jessica Randall</h3>
+  <h3 style="color: rgb(160, 234, 148);">London, United Kingdom</h3>
+  <div style="color: azure;">"Front-end developer and avid reader."</div>
+</div>
   
-  </div>
+<div> Gitup</div>
+<div>Frontend Mentor</div>
+<div> Linkdeln</div>
+<div> Twitter</div>
+<div> Instagram</div>
+
 </body>
 </html>
