--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
   <link rel="stylesheet" href="index.css">
 <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
  </head>
- <body class="main">
-
+ <body>
+<div class="main">
   <img src="images/avatar-jessica.jpeg" alt="avatar-jessica">
 
-  <div class="first">
-  <h3 style="color: azure;">Jessica Randall</h3>
+  <h2 style="color: azure;">Jessica Randall</h2>
   <h3 style="color: rgb(160, 234, 148);">London, United Kingdom</h3>
-  <div style="color: azure;">"Front-end developer and avid reader."</div>
-</div>
-  
-<div> Gitup</div>
-<div>Frontend Mentor</div>
-<div> Linkdeln</div>
-<div> Twitter</div>
-<div> Instagram</div>
+  <p style="color: azure;">"Front-end developer and avid reader."</p>
 
+  
+<div style="color: white;"> Gitup</div><br><br>
+<div style="color: white;">Frontend Mentor</div><br><br>
+<div style="color: white;"> Linkdeln</div><br><br>
+<div style="color: white;"> Twitter</div><br><br>
+<div style="color: white;"> Instagram</div><br><br>
+</div>
 </body>
 </html>
